--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,41 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-scheme: #111;
+  --background-scheme: #F0F0F0;
+  --clr-salt: #F0F0F0;
+  --clr-pepper: #111;
+  --clr-link: #598EFF;
+  --clr-choc: #715656;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-scheme: #F0F0F0;
+    --background-scheme: #111;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: var(--font-raleway);
+  color: var(--foreground-scheme);
+  background: var(--background-scheme)
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+nav {
+  position: fixed;
+  width: 100%;
+  background-color: none;
+  z-index: 4;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s ease;
+}
+
+footer {
+  background-color: var(--clr-pepper);
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
