--- a/src/components/hero/heroOverlay/HeroOverlay.module.css
+++ b/src/components/hero/heroOverlay/HeroOverlay.module.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: var(--clr-choc);
-    opacity: 0.45;
+    background-color: #342929;
+    opacity: 0.6;
     z-index: 2;
 }
