--- a/src/components/banner/bannerWelcome/BannerWelcome.module.css
+++ b/src/components/banner/bannerWelcome/BannerWelcome.module.css
@@ -115,10 +115,16 @@
     }
 
     img {
-        height: 90%;
+        height: 300px;
+        width: auto;
         max-width: none;
     }
 
+    @media (max-width: 1024px) {
+        img {
+            height: 270px;
+        }
+    }
 }
 
 @media (max-width: 1280px) {
