--- a/src/components/banner/bannerWelcome/BannerWelcome.module.css
+++ b/src/components/banner/bannerWelcome/BannerWelcome.module.css
@@ -125,6 +125,12 @@
             height: 270px;
         }
     }
+
+    @media (max-width: 768px) {
+        img {
+            height: 250px;
+        }
+    }
 }
 
 @media (max-width: 1280px) {
@@ -160,8 +166,8 @@
 
     .carousel_container {
         width: 77%;
-        padding: 18px 0px 0px 0px;
         margin: 0px;
         order: 1;
+        padding-bottom: 10px;
     }
 }
