--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -3,119 +3,118 @@
 /* footer html tag styles can be found in global.css file */
 
 .footer_container {
-    width: 100%;
-    max-width: 1440px;
-    padding: 30px 40px;
-    font-family: var(--font-prata);
+	width: 100%;
+	max-width: 1440px;
+	padding: 30px 40px;
+	font-family: var(--font-prata);
 
-    .footer_content {
-        margin: 0px auto;
-        color: var(--clr-salt);
-        padding: 0px 20px;
+	.footer_content {
+		margin: 0px auto;
+		color: var(--clr-salt);
+		padding: 0px 20px;
 
-        .footer_separation {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            column-gap: 5px;
+		.footer_separation {
+			display: flex;
+			flex-wrap: wrap;
+			justify-content: space-between;
+			column-gap: 5px;
 
-            .footer_section {
-                display: flex;
-                flex-direction: column;
-                width: auto;
-                margin-bottom: 1rem;
+			.footer_section {
+				display: flex;
+				flex-direction: column;
+				width: auto;
+				margin-bottom: 1rem;
 
-                img {
-                    width: auto;
-                    height: 60px;
-                }
+				img {
+					width: auto;
+					height: 60px;
+				}
 
-                .footer_headers {
-                    display: flex;
-                    align-items: center;
-                    font-size: 1.125rem;
-                    white-space: pre-wrap;
-                    margin-bottom: 0.5rem;
-                }
+				.footer_headers {
+					display: flex;
+					align-items: center;
+					font-size: 1.125rem;
+					white-space: pre-wrap;
+					margin-bottom: 0.5rem;
+				}
 
-                .footer_nav {
-                    font-family: var(--font-urbanist);
-                    font-size: 0.9rem;
-                    color: #D2D2D2;
-                    margin: 0.3rem 0rem;
-                }
+				.footer_nav {
+					font-family: var(--font-urbanist);
+					font-size: 0.9rem;
+					color: var(--clr-offwhite);
+					margin: 0.3rem 0rem;
+				}
 
-                .footer_legal {
-                    display: flex;
-                    align-items: center;
-                    font-family: var(--font-urbanist);
-                    font-size: 0.9rem;
-                    color: #D2D2D2;
-                    white-space: pre-wrap;
-                    margin-bottom: 0.75rem;
-                }
+				.footer_legal {
+					display: flex;
+					align-items: center;
+					font-family: var(--font-urbanist);
+					font-size: 0.9rem;
+					color: var(--clr-offwhite);
+					white-space: pre-wrap;
+					margin-bottom: 0.75rem;
+				}
 
-                .footer_social {
-                    display: flex;
-                    position: relative;
-                    justify-content: center;
-                    column-gap: 1rem;
-                    margin-top: 0.75rem;
-                    margin-left: 0.25rem;
-                }
+				.footer_social {
+					display: flex;
+					position: relative;
+					justify-content: center;
+					column-gap: 1rem;
+					margin-top: 0.75rem;
+					margin-left: 0.25rem;
+				}
 
-                a {
-                    &:hover {
-                        color: var(--clr-choc);
-                    }
-                }
+				a {
+					&:hover {
+						color: var(--clr-choc);
+					}
+				}
 
-                @media (max-width: 1024px) {
+				@media (max-width: 1024px) {
+					.footer_headers {
+						font-size: 0.97rem;
+						margin-bottom: 0.4rem;
+					}
 
-                    .footer_headers {
-                        font-size: 0.97rem;
-                        margin-bottom: 0.4rem;
-                    }
+					.footer_nav,
+					.footer_legal {
+						font-size: 0.85rem;
+						margin: 0.3rem 0rem;
+					}
+				}
 
-                    .footer_nav,
-                    .footer_legal {
-                        font-size: 0.85rem;
-                        margin: 0.3rem 0rem;
-                    }
-                }
+				@media (max-width: 768px) {
+					.footer_headers {
+						font-size: 0.9rem;
+						margin-bottom: 0.36rem;
+					}
 
-                @media (max-width: 768px) {
-                    .footer_headers {
-                        font-size: 0.9rem;
-                        margin-bottom: 0.36rem;
-                    }
+					.footer_nav,
+					.footer_legal {
+						font-size: 0.8rem;
+						margin: 0.27rem 0rem;
+					}
 
-                    .footer_nav,
-                    .footer_legal {
-                        font-size: 0.8rem;
-                        margin: 0.27rem 0rem;
-                    }
+					.footer_social {
+						justify-content: center;
+						margin-left: 0.125rem;
+					}
+				}
+			}
+		}
 
-                    .footer_social {
-                        justify-content: center;
-                        margin-left: 0.125rem;
-                    }
-                }
-            }
-        }
-
-        @media (max-width: 768px) {
-            .footer_separation {
-                justify-content: space-between;
-                column-gap: 50px;
-                row-gap: 30px;
-            }
-        }
-    }
+		@media (max-width: 768px) {
+			.footer_separation {
+				justify-content: space-between;
+				column-gap: 50px;
+				row-gap: 30px;
+			}
+		}
+	}
 }
 
 @media (max-width: 768px) {
-    .footer_container {
-        padding: 60px 40px;
-    }
+	.footer_container {
+		padding: 60px 40px;
+	}
 }
