--- a/src/components/hero/heroOther/heroCTA/HeroCTA.module.css
+++ b/src/components/hero/heroOther/heroCTA/HeroCTA.module.css
@@ -7,13 +7,16 @@
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
+	transform: translate(-50%, -30%);
 	z-index: 3;
+	width: 80%;
 	color: var(--clr-salt);
 
 	h1 {
 		font-family: var(--font-prata);
-		font-size: 39px;
+		font-size: 45px;
+		animation: zoom-in 0.4s ease forwards;
+		text-align: center;
 	}
 
 	span {
@@ -21,9 +24,21 @@
 		font-size: 35px;
 	}
 
+	@keyframes zoom-in {
+        from {
+            opacity: 0.8;
+            transform: scale(0.72);
+        }
+
+        to {
+            opacity: 1; 
+            transform: scale(1);
+        }
+    }
+
 	@media (max-width: 1280px) {
 		h1 {
-			font-size: 36px;
+			font-size: 40px;
 		}
 
 		span {
@@ -33,7 +48,7 @@
 
 	@media (max-width: 1024px) {
 		h1 {
-			font-size: 30px;
+			font-size: 36px;
 		}
 
 		span {
@@ -43,7 +58,7 @@
 
 	@media (max-width: 768px) {
 		h1 {
-			font-size: 24px;
+			font-size: 30px;
 		}
 
 		span {
@@ -63,7 +78,6 @@
 
 @media (max-width: 1280px) {
 	.hero_text {
-		transform: translate(-50%, -50%);
 		row-gap: 3vh;
 	}
 
@@ -74,17 +88,10 @@
 
 @media (max-width: 1024px) {
 	.hero_text {
-		transform: translate(-50%, -50%);
 		row-gap: 3vh;
 	}
 
 	.button_group {
 		column-gap: 5%;
-	}
-}
-
-@media (max-width: 768px) {
-	.hero_text {
-		transform: translate(-50%, -50%);
 	}
 }
