--- a/src/components/hero/heroMain/heroVid/HeroVid.module.css
+++ b/src/components/hero/heroMain/heroVid/HeroVid.module.css
@@ -1,8 +1,7 @@
 .hero_img {
 	width: 100%;
-	height: 100%;
+	height: auto;
 	object-fit: cover;
-	object-position: 50% 30%;
 	z-index: 1;
 	opacity: 1;
 }
