added video tag css so placeholder has sames styles as vid

--- a/src/components/hero/heroMain/heroVid/HeroVid.module.css
+++ b/src/components/hero/heroMain/heroVid/HeroVid.module.css
@@ -1,7 +1,9 @@
 .hero_img {
-	width: 100%;
-	height: auto;
-	object-fit: cover;
-	z-index: 1;
-	opacity: 1;
+	video {
+		width: 100%;
+		height: auto;
+		object-fit: cover;
+		z-index: 1;
+		opacity: 1;
+	}
 }
