--- a/src/components/hero/heroMain/HeroMain.module.css
+++ b/src/components/hero/heroMain/HeroMain.module.css
@@ -3,6 +3,14 @@
 	position: relative;
 	width: 100%;
 	height: 100vh;
+
+	video {
+		width: 100%;
+		height: auto;
+		object-fit: cover;
+		z-index: 1;
+		opacity: 1;
+	}
 }
 
 @media (max-width: 768px) {
