--- a/src/components/hero/heroMain/HeroMain.module.css
+++ b/src/components/hero/heroMain/HeroMain.module.css
@@ -6,10 +6,20 @@
 
 	video {
 		width: 100%;
-		height: screen;
+		height: 100vh;
 		object-fit: cover;
 		z-index: 1;
 		opacity: 1;
+	}
+
+	@media (max-width: 768px) {
+		video {
+			width: 100%;
+			height: 63vh;
+			object-fit: cover;
+			z-index: 1;
+			opacity: 1;
+		}
 	}
 }
 
