--- a/src/components/hero/heroMain/HeroMain.module.css
+++ b/src/components/hero/heroMain/HeroMain.module.css
@@ -5,21 +5,11 @@
 	height: 100vh;
 
 	video {
-		width: 100%;
-		height: 100vh;
+		min-width: 100%;
+		min-height: 100%;
 		object-fit: cover;
 		z-index: 1;
 		opacity: 1;
-	}
-
-	@media (max-width: 768px) {
-		video {
-			width: 100%;
-			height: 63vh;
-			object-fit: cover;
-			z-index: 1;
-			opacity: 1;
-		}
 	}
 }
 
