--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,11 @@
 	--foreground-scheme: #111;
 	--background-scheme: #f0f0f0;
 	--clr-salt: #f0f0f0;
-  --clr-offwhite: #d2d2d2;
-  --clr-pepper: #111;
+	--clr-offwhite: #d2d2d2;
+	--clr-pepper: #111;
 	--clr-link: #598eff;
-	--clr-choc: #715656;
+	--clr-choc: #5f504d;
+	--clr-cacao: #907873;
 }
 
 @media (prefers-color-scheme: dark) {
