--- a/src/components/hero/heroOther/HeroOther.module.css
+++ b/src/components/hero/heroOther/HeroOther.module.css
@@ -2,23 +2,23 @@
 	display: flex;
 	position: relative;
 	width: 100%;
-	height: 40vh;
+	height: 400px;
 }
 
 @media (max-width: 1280px) {
 	.hero_container {
-		height: 35vh;
+		height: 300px;
 	}
 }
 
 @media (max-width: 1024px) {
 	.hero_container {
-		height: 30vh;
+		height: 250px;
 	}
 }
 
 @media (max-width: 768px) {
 	.hero_container {
-		height: 35vh;
+		height: 270px;
 	}
 }
