changed some styles

--- a/src/app/(menuPages)/nosotros/Nosotros.module.css
+++ b/src/app/(menuPages)/nosotros/Nosotros.module.css
@@ -33,7 +33,7 @@
 			}
 
 			.span_3 {
-				background: -webkit-linear-gradient(45deg, #19cf8f, #ed0891);
+				background: -webkit-linear-gradient(45deg, #1fe9a2, #e60c8f);
 				background-clip: text;
 				-webkit-background-clip: text;
 				-webkit-text-fill-color: transparent;
