--- a/src/components/banner/bannersMain/bannerWelcome/BannerWelcome.module.css
+++ b/src/components/banner/bannersMain/bannerWelcome/BannerWelcome.module.css
@@ -101,6 +101,8 @@
 	height: 100%;
 	margin-left: 40px;
 	overflow: hidden;
+	border: 3px solid #000;
+	border-radius: 24px;
 }
 
 .carousel_items {
@@ -167,6 +169,6 @@
 		width: 77%;
 		margin: 0px;
 		order: 1;
-		padding-bottom: 10px;
+		margin-bottom: 20px;
 	}
 }
