--- a/src/app/(menuPages)/nosotros/Nosotros.module.css
+++ b/src/app/(menuPages)/nosotros/Nosotros.module.css
@@ -3,7 +3,7 @@
 	align-items: center;
 	justify-content: center;
 	background-color: var(--clr-salt);
-    width: 100%;
+	width: 100%;
 
 	.about_us {
 		display: flex;
@@ -19,7 +19,6 @@
 			font-family: var(--font-raleway);
 			font-weight: 500;
 			color: #2e2e2e;
-			text-align: start;
 			line-height: 2;
 
 			.span_1 {
@@ -30,7 +29,7 @@
 
 			.span_2 {
 				color: var(--clr-choc);
-                font-weight: 600;
+				font-weight: 600;
 			}
 
 			@media (max-width: 1280px) {
@@ -45,7 +44,7 @@
 				}
 			}
 
-            @media (max-width: 1024px) {
+			@media (max-width: 768px) {
 				.span_1 {
 					font-size: 18px;
 				}
@@ -78,14 +77,14 @@
 			}
 		}
 
-        @media (max-width: 768px) {
+		@media (max-width: 768px) {
 			p {
 				font-size: 20px;
-                text-align: start;
+				text-align: center;
 			}
 
 			img {
-                width: 40%;
+				width: 40%;
 				margin-bottom: 20px;
 			}
 		}
@@ -94,9 +93,9 @@
 	@media (max-width: 768px) {
 		.about_us {
 			flex-direction: column;
-            width: 100%;
-            row-gap: 40px;
-            padding: 80px 0px;
+			width: 100%;
+			row-gap: 40px;
+			padding: 80px 0px;
 		}
 	}
 }
