--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
 	--clr-offwhite: #d2d2d2;
 	--clr-pepper: #111;
 	--clr-link: #598eff;
+	--clr-dark-choc: #301b12;
 	--clr-choc: #5f504d;
 	--clr-cacao: #907873;
 }
