--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -16,7 +16,7 @@
 		.footer_separation {
 			display: flex;
 			flex-wrap: wrap;
-			justify-content: space-between;
+			justify-content: space-evenly;
 			column-gap: 5px;
 
 			.footer_section {
