--- a/src/components/banner/bannersMain/bannerIntro/BannerIntro.module.css
+++ b/src/components/banner/bannersMain/bannerIntro/BannerIntro.module.css
@@ -4,138 +4,180 @@
 	align-items: center;
 	justify-content: center;
 
-	.banner_text {
-		width: 40%;
-		padding-left: 40px;
+	.banner_apps {
+		display: flex;
 		align-items: center;
+		justify-content: space-between;
+		width: 40%;
+		padding: 34px 40px 20px 40px;
+		max-width: 1360px;
+		border-radius: 16px;
 
-		h3 {
-			font-family: var(--font-prata);
-			font-size: 24px;
-			text-align: flex-start;
-			padding-top: 1vh;
-		}
+		.banner_content {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-start;
+			width: 100%;
+			row-gap: 10px;
 
-		h4 {
-			font-family: var(--font-raleway);
-			font-size: 20px;
-			text-align: flex-start;
-			color: #909090;
-		}
+			.app_container {
+				width: 100%;
 
-		ul {
-			row-gap: 1vh;
+				.app_name {
+					position: relative;
+					display: flex;
+					flex-direction: column;
+					text-align: start;
+					border-bottom: 2px solid #e5e5e5;
+					margin-bottom: 10px;
+					padding-bottom: 12px;
 
-			li {
-				font-size: 24px;
-			}
+					h3 {
+						font-family: var(--font-rale);
+						font-weight: 400;
+						font-size: 22px;
+						color: #444;
+					}
 
-			@media (max-width: 1280px) {
-				li {
-					font-size: 21px;
+					.app_arrow {
+						position: absolute;
+						top: 9px;
+						right: 15px;
+						border-style: solid;
+						border-color: var(--clr-ultra-violet);
+						border-width: 0 3px 3px 0;
+						border-radius: 3px;
+						display: inline-block;
+						padding: 6px;
+						transform: rotate(45deg);
+						-webkit-transform: rotate(45deg);
+						transition: all 0.4s linear;
+						z-index: 2;
+					}
+
+					.app_arrow.active {
+						border-color: #333;
+						transition: all 0.4s linear;
+						transform: rotate(-135deg);
+						-webkit-transform: rotate(-135deg);
+					}
+
+					@media (max-width: 1280px) {
+						h3 {
+							font-size: 20px;
+						}
+
+						.app_arrow {
+							padding: 5px;
+						}
+					}
+
+					@media (max-width: 1024px) {
+						h3 {
+							font-size: 18px;
+							width: 80%;
+						}
+
+						.app_arrow {
+							top: 7px;
+							right: 12px;
+							border-width: 0 2px 2px 0;
+							border-radius: 2px;
+						}
+					}
 				}
-			}
 
-			@media (max-width: 1024px) {
-				li {
-					font-size: 20px;
+				.app_name.active {
+					h3 {
+						font-weight: 500;
+						font-size: 23px;
+						color: #333;
+						transition: all 0.1s linear;
+					}
+
+					@media (max-width: 1280px) {
+						h3 {
+							font-size: 21px;
+						}
+					}
+					
+					@media (max-width: 1024px) {
+						h3 {
+							font-size: 19px;
+						}
+					}
 				}
-			}
 
-			@media (max-width: 768px) {
-				li {
-					font-size: 24px;
+				.app_info {
+					height: 10px;
+					margin-bottom: 0px;
+					transition: all 0.4s linear;
+
+					p {
+						font-family: var(--font-poppins);
+						font-weight: 300;
+						font-size: 19px;
+						color: #555;
+						opacity: 0;
+					}
+
+					@media (max-width: 1280px) {
+						p {
+							font-size: 18px;
+						}
+					}
+
+					@media (max-width: 1024px) {
+						p {
+							font-size: 16px;
+						}
+					}
 				}
-			}
-		}
 
-		p {
-			font-size: 16px;
-			text-align: flex-start;
-			padding-bottom: 2vh;
-			text-align: justify;
-		}
+				.app_info.active {
+					height: auto;
+					margin-bottom: 40px;
+					transition: all 0.4s linear;
 
-		button {
-			display: inline-block;
-			margin-top: 2vh;
-			padding: 12px 21px;
-			border: 3px solid var(--clr-pepper);
-			background-color: var(--clr-salt);
-			color: var(--clr-pepper);
-			border-radius: 8px;
-			transition: background-color 0.3s, color 0.2s;
-			font-family: var(--font-raleway);
-			font-weight: 500;
-			font-size: 20px;
+					p {
+						opacity: 1;
 
-			&:hover {
-				background-color: var(--clr-pepper);
-				color: var(--clr-salt);
-			}
-		}
+						transition: all 0.5s linear;
+					}
+				}
 
-		@media (max-width: 1280px) {
-			h3 {
-				font-size: 20px;
-			}
+				@media (max-width: 1280px) {
 
-			h4 {
-				font-size: 17px;
-			}
+					.app_info.active {
+						height: auto;
+						margin-bottom: 35px;
+						transition: all 0.4s linear;
+					}
+				}
 
-			p {
-				font-size: 15px;
-				text-align: flex-start;
-			}
+				@media (max-width: 1024px) {
 
-			button {
-				font-size: 17px;
-				padding: 10px 14px;
-			}
-		}
+					.app_info.active {
+						height: auto;
+						margin-bottom: 30px;
+						transition: all 0.4s linear;
+					}
+				}
 
-		@media (max-width: 1024px) {
-			h3 {
-				font-size: 16px;
-			}
+				@media (max-width: 768px) {
 
-			h4 {
-				font-size: 14px;
-			}
-
-			p {
-				font-size: 14px;
-				text-align: flex-start;
-			}
-
-			button {
-				font-size: 16px;
-				padding: 9px 12px;
+					.app_info.active {
+						height: auto;
+						margin-bottom: 25px;
+						transition: all 0.4s linear;
+					}
+				}
 			}
 		}
 
 		@media (max-width: 768px) {
-			h4 {
-				padding-top: 2vh;
-			}
-
-			ul {
-				text-align: center;
-				padding-top: 2vh;
-			}
-
-			p {
-				font-size: 16px;
-				text-align: center;
-			}
-
-			button {
-				font-size: 16px;
-				font-weight: 500;
-				border-radius: 4px;
-				background-color: var(--clr-pepper);
-				color: var(--clr-salt);
+			.banner_content {
+				flex-direction: column;
 			}
 		}
 	}
@@ -158,7 +200,7 @@
 	}
 
 	@media (max-width: 1280px) {
-		.banner_text {
+		.banner_apps {
 			width: 37%;
 			padding-left: 30px;
 		}
@@ -170,7 +212,7 @@
 	}
 
 	@media (max-width: 1024px) {
-		.banner_text {
+		.banner_apps {
 			width: 40%;
 		}
 
@@ -180,9 +222,9 @@
 	}
 
 	@media (max-width: 768px) {
-		.banner_text {
+		.banner_apps {
 			width: 77%;
-			padding: 0px;
+			padding: 30px 0px 0px 0px;
 		}
 
 		.banner_img {
