--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,12 +6,14 @@
 	--foreground-scheme: #111;
 	--background-scheme: #f0f0f0;
 	--clr-salt: #f0f0f0;
+	--clr-milk: #e0e0e0;
 	--clr-offwhite: #d2d2d2;
 	--clr-pepper: #111;
 	--clr-link: #598eff;
 	--clr-dark-choc: #301b12;
 	--clr-choc: #5f504d;
-	--clr-cacao: #907873;
+	--clr-cacao: #8c746d;
+	--clr-target: #be5252;
 }
 
 @media (prefers-color-scheme: dark) {
