--- a/src/components/banner/bannersMain/bannerApps/BannerApps.module.css
+++ b/src/components/banner/bannersMain/bannerApps/BannerApps.module.css
@@ -1,3 +1,10 @@
+.apps_title {
+	font-family: var(--font-prata);
+	font-size: 36px;
+	text-align: flex-start;
+	padding-bottom: 36px;
+}
+
 .apps_container {
 	display: flex;
 	width: 100%;
@@ -9,16 +16,14 @@
 		align-items: center;
 		justify-content: space-between;
 		width: 40%;
-		padding: 34px 40px 20px 40px;
 		max-width: 1360px;
-		border-radius: 16px;
+		padding: 34px 40px 20px 40px;
 
 		.banner_content {
 			display: flex;
 			flex-direction: row;
 			justify-content: flex-start;
 			width: 100%;
-			width: 500px;
 			row-gap: 10px;
 
 			.app_container {
@@ -58,7 +63,7 @@
 
 					.app_arrow.active {
 						border-color: #333;
-						transition: all 01s linear;
+						transition: all 0.4s linear;
 						transform: rotate(-135deg);
 						-webkit-transform: rotate(-135deg);
 					}
@@ -93,7 +98,7 @@
 						font-weight: 500;
 						font-size: 23px;
 						color: #333;
-						transition: all 0.1s linear;
+						transition: all 0.4s linear;
 					}
 
 					@media (max-width: 1280px) {
@@ -143,7 +148,7 @@
 					p {
 						opacity: 1;
 
-						transition: all 0.5s linear;
+						transition: all 0.4s linear;
 					}
 				}
 
@@ -198,6 +203,14 @@
 			object-fit: cover;
 			object-position: 50% 30%;
 		}
+
+		@media (max-width: 768px) {
+			img {
+				border-radius: 8px;
+				width: 50%;
+				height: 100%;
+			}
+		}
 	}
 
 	@media (max-width: 1280px) {
@@ -230,23 +243,10 @@
 
 		.banner_img {
 			width: 77%;
-			height: 300px;
+			height: 200px;
 			padding: 0px;
-
-			img {
-				border-radius: 8px;
-				width: 100%;
-				height: 100%;
-			}
 		}
 	}
-}
-
-.apps_title {
-	font-family: var(--font-prata);
-	font-size: 36px;
-	text-align: flex-start;
-	padding-bottom: 36px;
 }
 
 @media (max-width: 1280px) {
@@ -257,7 +257,7 @@
 
 @media (max-width: 1024px) {
 	.apps_title {
-		font-size: 19px;
+		font-size: 24px;
 	}
 }
 
