--- a/src/components/banner/bannersMain/bannerApps/BannerApps.module.css
+++ b/src/components/banner/bannersMain/bannerApps/BannerApps.module.css
@@ -201,13 +201,12 @@
 			width: 100%;
 			height: auto;
 			object-fit: cover;
-			object-position: 50% 30%;
 		}
 
 		@media (max-width: 768px) {
 			img {
 				border-radius: 8px;
-				width: 50%;
+				width: 100%;
 				height: 100%;
 			}
 		}
@@ -243,8 +242,9 @@
 
 		.banner_img {
 			width: 77%;
-			height: 200px;
+			height: 270px;
 			padding: 0px;
+			object-position: top;
 		}
 	}
 }
